[package]
name = "day18"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
indexmap = "2.1.0"
nom = "7.1.3"
num-derive = "0.4.1"
num-traits = "0.2.17"
regex = "1.10.2"
