[package]
name = "day21"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
num-derive = "0.4.1"
num-traits = "0.2.17"
strum = "0.25.0"
strum_macros = "0.25.3"
