[package]
name = "day24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_float_eq = "1.1.3"
clap = { version = "4.4.11", features = ["derive"] }
itertools = "0.12.0"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }
regex = "1.10.2"
