[package]
name = "day10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }
priority-queue = "2.7.0"
regex = "1.12.2"
